logs/securesubmit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SecureSubmit-2.5.7.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/jsonpickle'...
Listing './lib/python3.5/site-packages/jsonpickle/ext'...
Listing './lib/python3.5/site-packages/jsonpickle-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/securesubmit'...
Listing './lib/python3.5/site-packages/securesubmit/applepay'...
Compiling './lib/python3.5/site-packages/securesubmit/applepay/ecv1.py'...
***   File "./lib/python3.5/site-packages/securesubmit/applepay/ecv1.py", line 35
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/securesubmit/entities'...
Listing './lib/python3.5/site-packages/securesubmit/infrastructure'...
Listing './lib/python3.5/site-packages/securesubmit/services'...
Listing './lib/python3.5/site-packages/securesubmit/services/fluent'...
Compiling './lib/python3.5/site-packages/securesubmit/services/fluent/__init__.py'...
***   File "./lib/python3.5/site-packages/securesubmit/services/fluent/__init__.py", line 52
    print validation['exception_message']
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/securesubmit/services/fluent/gateway.py'...
***   File "./lib/python3.5/site-packages/securesubmit/services/fluent/gateway.py", line 168
    except HpsGatewayException, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/securesubmit/services/gateway.py'...
***   File "./lib/python3.5/site-packages/securesubmit/services/gateway.py", line 143
    print 'URL: ' + self._url
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/securesubmit/services/token.py'...
***   File "./lib/python3.5/site-packages/securesubmit/services/token.py", line 67
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/securesubmit/tests'...
Listing './lib/python3.5/site-packages/securesubmit/tests/applepay'...
Listing './lib/python3.5/site-packages/securesubmit/tests/certification'...
Compiling './lib/python3.5/site-packages/securesubmit/tests/certification/test_ecommerce.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/certification/test_ecommerce.py", line 44
    print 'batch id: {0}'.format(response.id)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/securesubmit/tests/certification/test_moto.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/certification/test_moto.py", line 43
    print 'batch id: {0}'.format(response.id)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/securesubmit/tests/certification/test_recurring.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/certification/test_recurring.py", line 43
    print rvalue
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/securesubmit/tests/certification/test_restauant.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/certification/test_restauant.py", line 37
    print 'batch id: {0}'.format(response.id)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/securesubmit/tests/certification/test_retail.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/certification/test_retail.py", line 37
    print 'batch id: {0}'.format(response.id)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/securesubmit/tests/fluent'...
Listing './lib/python3.5/site-packages/securesubmit/tests/payplan'...
Compiling './lib/python3.5/site-packages/securesubmit/tests/test_amex.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/test_amex.py", line 88
    except HpsCreditException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/securesubmit/tests/test_discover.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/test_discover.py", line 47
    except HpsCreditException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/securesubmit/tests/test_general.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/test_general.py", line 39
    except HpsGatewayException, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/securesubmit/tests/test_mastercard.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/test_mastercard.py", line 101
    except HpsCreditException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/securesubmit/tests/test_visa.py'...
***   File "./lib/python3.5/site-packages/securesubmit/tests/test_visa.py", line 104
    except HpsCreditException, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
